fix z-index of carousel title fade

--- a/DesktopModules/AgapeConnect/Stories/themes/default/france.css
+++ b/DesktopModules/AgapeConnect/Stories/themes/default/france.css
@@ -72,6 +72,7 @@
     padding:0;
     background:transparent;
     height: 84px;
+    z-index:6;
 }
 
 .rotator1 .slider-image-text {
